# m545_traversability_pipeline

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: image_to_gridmap.yaml  parameters.yaml
data/edited/: edited_map.bag
devel/.private/catkin_tools_prebuild/: .catkin
include/: ImageToMap.h  MapToImage.h
launch/: align_maps.launch  load_maps.launch  map_to_image.launch  modify_traversability_map.launch  pcl_to_gridmap.launch  traversability_estimation.launch
rviz/: compare_edited_map.rviz
scripts/: image_publisher.py
src/: ImageToMap.cpp  MapToImage.cpp  align_maps_node.cpp  image_to_map_node.cpp  map_to_image_node.cpp
test/: compare_maps.cpp  compare_maps.launch  load_map.cpp  test_image_to_map.cpp  visualize_map.launch
